# docs/swagger.json
@@ -106,6 +106,11 @@
                 "responses": {}
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update",
                 "consumes": [
                     "application/json"
@@ -218,6 +223,28 @@
                         }
                     }
                 ],
+                "responses": {}
+            }
+        },
+        "/profile/my-orders/": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get all orders i have",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "profile/my-orders"
+                ],
+                "summary": "Get My Orders",
+                "operationId": "get-my-orders",
                 "responses": {}
             }
         }
